package com.devops.alternancetracker.exception;

import java.time.LocalDateTime;

public record ErrorResponse (
    LocalDateTime timestamp,
    int status,
    String message
    ) {
    
}
