package com.devops.alternancetracker.model;

public enum ApplicationStatus{
    PENDING,
    INTERVIEW,
    REJECTED,
    ACCEPTED
    
}
